workex, education UI

--- a/force-app/main/default/lwc/resumeBuilder/resumeBuilder.html
+++ b/force-app/main/default/lwc/resumeBuilder/resumeBuilder.html
@@ -1,5 +1,6 @@
 <template>
-    <lightning-card title="Personal Information" icon-name="custom:custom15">
-        <c-personal-info></c-personal-info>
-    </lightning-card>
+    <!-- <lightning-card title="Personal Information" icon-name="custom:custom15"></lightning-card> -->
+    <c-personal-info>prsnl test</c-personal-info>
+    <c-work-ex></c-work-ex>
+    <c-education></c-education>
 </template>
