skills and education done

--- a/force-app/main/default/lwc/resumeBuilder/resumeBuilder.html
+++ b/force-app/main/default/lwc/resumeBuilder/resumeBuilder.html
@@ -3,6 +3,6 @@
     <c-personal-info onupdatepi={handleUpdatePI}></c-personal-info>
     <c-work-ex onupdateworkex={handleUpdateWorkEx}></c-work-ex>
     <!-- <c-work-ex></c-work-ex> -->
-    <c-education></c-education>
-    <c-skills></c-skills>
+    <c-education onupdateeducation={handleUpdateEd}></c-education>
+    <c-skills onupdateskills={handleUpdateSkills}></c-skills>
 </template>
