--- a/force-app/main/default/lwc/skills/skills.html
+++ b/force-app/main/default/lwc/skills/skills.html
@@ -1,8 +1,8 @@
 <template>
     <lightning-card title="Skills" icon-name="standard:employee_job_position">
         <div class="slds-m-around_medium slds-box">
-            <lightning-input type="text" label="Skill" placeholder="LWC, Apex, Copado"></lightning-input>
+            <lightning-input type="text" data-id="skillsInput" label="Add your skills separated by a comma, okay?" placeholder="LWC, Apex, Copado"></lightning-input>
         </div>
-        <lightning-button variant="brand" label="Add Skill" title="Click to add skill" onclick={handleAddSkill} class="slds-m-left_x-small"></lightning-button>
+            <lightning-button variant="brand" label="Add Skills" title="Click to add skills" onclick={handleAddSkills} class="slds-m-left_x-small"></lightning-button>
     </lightning-card>
 </template>
